Fix text sizing, alignment on larger screens.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,12 +9,14 @@
 
 .header__container {
 	position: absolute;
-	top: 20%;
-	width: 100%;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 @media screen and (min-width: 1024px) {
 	.header__container {
+		left: 25vw;
 	}
 }
 
@@ -25,11 +27,20 @@
 	justify-content: space-between;
 	width: 29rem;
 	height: 33rem;
-	margin: 0 auto;
-	transform: translateY(-5vw);
+	margin: auto;
+	/* 	transform: translateY(-5vw);
+ */
 }
 
-@media screen and (min-width: 540px) {
+@media screen and (min-width: 1440px) {
+	.text__container {
+		width: 38rem;
+		height: 34rem;
+		align-items: start;
+	}
+}
+
+/* @media screen and (min-width: 540px) {
 	.text__container {
 		transform: translateY(-1vh);
 	}
@@ -52,7 +63,7 @@
 	.text__container {
 		margin-left: 12%;
 	}
-}
+} */
 
 /************************************************
 			    Header Image
@@ -110,6 +121,23 @@
 	text-align: center;
 }
 
+@media screen and (min-width: 1440px) {
+	.header__title {
+		font-size: 5.6rem;
+		text-align: left;
+	}
+
+	.header__title::before {
+		font-size: 1.5rem;
+		text-align: left;
+	}
+
+	.header__text {
+		font-size: 1.5rem;
+		text-align: left;
+	}
+}
+
 /************************************************
 			    Header Button
 ************************************************/
@@ -120,8 +148,19 @@
 	font-size: 1.3rem;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	top: 300px;
-	left: 200px;
+	/* 	top: 300px;
+	left: 200px; */
 	padding: 1.5rem 3rem;
 	border: none;
+}
+
+.header__button:hover {
+	background-color: var(--lightOrange);
+	cursor: pointer;
+}
+
+@media screen and (min-width: 1440px) {
+	.header__button {
+		margin-top: 2rem;
+	}
 }
